gitignore: yarn.lock, package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,10 @@ node_modules/
 # Coverage directory used by tools like istanbul
 coverage/
 
+# Lockfiles
+yarn.lock
+package-lock.json
+
 ########################################################################
 # JetBrains
 ########################################################################
