--- a/template/my_component/frontend/package.json
+++ b/template/my_component/frontend/package.json
@@ -9,12 +9,14 @@
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/pdfjs-dist": "^2.1.5",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "apache-arrow": "^0.17.0",
     "bootstrap": "^4.4.1",
     "event-target-shim": "^5.0.1",
     "hoist-non-react-statics": "^3.3.2",
+    "pdfjs-dist": "^2.4.456",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
