WIP BROKEN Try to get LiterallyCanvas over the PDF

--- a/template/my_component/frontend/package.json
+++ b/template/my_component/frontend/package.json
@@ -14,11 +14,15 @@
     "@types/react-dom": "^16.9.0",
     "apache-arrow": "^0.17.0",
     "bootstrap": "^4.4.1",
+    "create-react-class": "^15.6.3",
     "event-target-shim": "^5.0.1",
     "hoist-non-react-statics": "^3.3.2",
+    "literallycanvas": "^0.5.2",
     "pdfjs-dist": "^2.4.456",
     "react": "^16.13.1",
+    "react-create-class": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-dom-factories": "^1.0.2",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
