--- a/examples/SelectableDataTable/frontend/package.json
+++ b/examples/SelectableDataTable/frontend/package.json
@@ -17,13 +17,12 @@
     "apache-arrow": "^0.17.0",
     "baseui": "^9.73.2",
     "bootstrap": "^4.4.1",
-    "event-target-shim": "^5.0.1",
-    "hoist-non-react-statics": "^3.3.2",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
+    "streamlit-component-support": "^0.0.2",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7"
   },
@@ -31,7 +30,6 @@
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^11.4.2",
-    "@types/hoist-non-react-statics": "^3.3.1",
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.150",
     "@types/node": "^14.0.13",
