--- a/examples/CustomDataframe/frontend/package.json
+++ b/examples/CustomDataframe/frontend/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
-    "streamlit-component-support": "^0.0.2"
+    "streamlit-component-lib": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
