--- a/examples/RadioButton/frontend/package.json
+++ b/examples/RadioButton/frontend/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
-    "streamlit-component-support": "^0.0.2",
+    "streamlit-component-lib": "^1.0.0",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7"
   },
