--- a/template-reactless/my_component/frontend/package.json
+++ b/template-reactless/my_component/frontend/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^12.0.0",
     "bootstrap": "^4.4.1",
     "react-scripts": "3.4.1",
-    "streamlit-component-support": "^0.0.2",
+    "streamlit-component-lib": "^1.0.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
