--- a/examples/CustomDataframe/frontend/package.json
+++ b/examples/CustomDataframe/frontend/package.json
@@ -8,13 +8,12 @@
     "apache-arrow": "^0.17.0",
     "baseui": "^9.73.2",
     "bootstrap": "^4.4.1",
-    "event-target-shim": "^5.0.1",
-    "hoist-non-react-statics": "^3.3.2",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "streamlit-component-lib": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,7 +38,6 @@
   },
   "homepage": ".",
   "devDependencies": {
-    "@types/hoist-non-react-statics": "^3.3.1",
     "prettier": "^2.0.5",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
