--- a/examples/MaterialLogin/frontend/package.json
+++ b/examples/MaterialLogin/frontend/package.json
@@ -4,16 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.10.2",
-    "apache-arrow": "^0.17.0",
-    "event-target-shim": "^5.0.1",
     "formik": "^2.1.5",
-    "hoist-non-react-statics": "^3.3.2",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
+    "streamlit-component-lib": "^1.0.0",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
     "yup": "^0.29.1"
@@ -44,7 +42,6 @@
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.1.0",
-    "@types/hoist-non-react-statics": "^3.3.1",
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
     "@types/node": "^13.13.4",
