--- a/template-reactless/my_component/frontend/package.json
+++ b/template-reactless/my_component/frontend/package.json
@@ -9,7 +9,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "react-scripts": "3.4.1",
-    "streamlit-component-lib": "^1.1.3",
+    "streamlit-component-lib": "1.2.0-beta.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -22,11 +22,7 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
