--- a/template-reactless/my_component/frontend/package.json
+++ b/template-reactless/my_component/frontend/package.json
@@ -7,7 +7,7 @@
     "@types/node": "^12.0.0",
     "react-scripts": "3.4.1",
     "streamlit-component-lib": "^1.3.0",
-    "typescript": "~3.8.0"
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
