--- a/template/my_component/frontend/package.json
+++ b/template/my_component/frontend/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "streamlit-component-lib": "^1.3.0",
-    "typescript": "~3.8.0"
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
