--- a/examples/CustomDataframe/frontend/package.json
+++ b/examples/CustomDataframe/frontend/package.json
@@ -3,16 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.12",
-    "@material-ui/icons": "^4.9.1",
-    "apache-arrow": "^0.17.0",
-    "baseui": "^9.73.2",
-    "lodash": "^4.17.15",
+    "lodash": "4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1",
-    "streamlit-component-lib": "^1.1.0"
+    "streamlit-component-lib": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,16 +31,11 @@
   },
   "homepage": ".",
   "devDependencies": {
-    "prettier": "^2.0.5",
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.4",
-    "@testing-library/user-event": "^10.1.0",
-    "@types/jest": "^25.2.1",
-    "@types/lodash": "^4.14.150",
-    "@types/node": "^13.13.4",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
-    "@types/reactstrap": "^8.4.2",
-    "typescript": "~3.8.3"
+    "@types/lodash": "4.14.150",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.2.0"
   }
 }
