--- a/examples/RadioButton/frontend/package.json
+++ b/examples/RadioButton/frontend/package.json
@@ -3,15 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "baseui": "^9.73.2",
+    "baseui": "^12.2.0",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1",
-    "streamlit-component-lib": "^1.1.1",
-    "styletron-engine-atomic": "^1.4.6",
-    "styletron-react": "^5.2.7"
+    "streamlit-component-lib": "^1.3.0",
+    "styletron-engine-atomic": "^1.5.0",
+    "styletron-react": "^6.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,19 +34,11 @@
   },
   "homepage": ".",
   "devDependencies": {
-    "@types/styletron-engine-atomic": "^1.1.0",
-    "@types/styletron-react": "^5.0.2",
-    "@types/styletron-standard": "^2.0.0",
-    "prettier": "^2.0.5",
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.4",
-    "@testing-library/user-event": "^10.1.0",
-    "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
-    "@types/node": "^13.13.4",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
-    "@types/reactstrap": "^8.4.2",
-    "typescript": "~3.8.3"
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.2.0"
   }
 }
