--- a/examples/RadioButton/radio_button/frontend/package.json
+++ b/examples/RadioButton/radio_button/frontend/package.json
@@ -38,7 +38,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.2.0"
   }
 }
