--- a/template-reactless/my_component/frontend/package.json
+++ b/template-reactless/my_component/frontend/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "streamlit-component-lib": "^1.3.0",
     "typescript": "^4.2.0"
   },
