--- a/examples/SelectableDataTable/frontend/package.json
+++ b/examples/SelectableDataTable/frontend/package.json
@@ -9,37 +9,25 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@devexpress/dx-react-core": "^2.6.2",
-    "@devexpress/dx-react-grid": "^2.6.2",
-    "@devexpress/dx-react-grid-material-ui": "^2.6.2",
-    "@material-ui/core": "^4.9.12",
-    "@material-ui/icons": "^4.9.1",
-    "apache-arrow": "^0.17.0",
-    "baseui": "^9.73.2",
+    "@devexpress/dx-react-core": "^4.0.3",
+    "@devexpress/dx-react-grid": "^4.0.3",
+    "@devexpress/dx-react-grid-material-ui": "^4.0.3",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1",
-    "streamlit-component-lib": "^1.1.1",
-    "styletron-engine-atomic": "^1.4.6",
-    "styletron-react": "^5.2.7"
+    "streamlit-component-lib": "^1.3.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.4",
-    "@testing-library/user-event": "^11.4.2",
-    "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.150",
-    "@types/node": "^14.0.13",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
-    "@types/reactstrap": "^8.4.2",
-    "@types/styletron-engine-atomic": "^1.1.0",
-    "@types/styletron-react": "^5.0.2",
-    "@types/styletron-standard": "^2.0.0",
-    "prettier": "^2.0.5",
-    "typescript": "~3.9.5"
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
