--- a/baseweb_components/button/frontend/package.json
+++ b/baseweb_components/button/frontend/package.json
@@ -14,7 +14,9 @@
       "typescript": "^4.2.0",
       "baseui": "^12.2.0",
       "styletron-standard": "^3.1.0",
-      "styletron-react": "^6.1.0"
+      "styletron-react": "^6.1.0",
+      "styletron-engine-monolithic": "^1.0.0",
+      "styletron-engine-atomic": "^1.5.0"
     },
     "resolutions": {
         "@types/react": "^16.9.0"
