--- a/cookiecutter/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-react/package.json
+++ b/cookiecutter/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-react/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "my_component",
+  "name": "{{ cookiecutter.import_name }}",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "streamlit-component-lib": "^2.0.0"
+    "streamlit-component-lib": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,7 +33,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "4.0.3",
     "typescript": "^4.2.0"
   }
 }
