--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,52 +9,7 @@ on:
       - "master"
 
 jobs:
-  build-templates:
-    runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: 
-          # For details, see: https://nodejs.dev/en/about/releases/
-          # Maintance LTS. End Of Life: 2023-04-30
-          - 14.x
-          # Maintance LTS. End Of Life: 2023-09-11
-          - 16.x
-          # The following versions are not supported as 
-          # they require react-script 5 which requires changes in 
-          # streamlit-component-lib package.
-          # For details, see: 
-          # https://github.com/streamlit/streamlit/pull/6584
-          # # Active LTS. End Of Life: 2025-04-30
-          # - 18.x
-          # # Current version
-          # - 19.x
-        cwd:
-          - ./template
-          - ./template-reactless
-
-    name: Templates / node-version=${{ matrix.node-version }} / cwd=${{ matrix.cwd }}
-
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        persist-credentials: false
-
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Install node dependencies
-      working-directory: ${{ matrix.cwd }}/my_component/frontend
-      run: npm install
-
-    - name: Build frontend code
-      working-directory: ${{ matrix.cwd }}//my_component/frontend
-      run: npm run build
-
-  build-examples:
+  build-examples-templates:
     runs-on: ubuntu-latest
 
     strategy:
@@ -76,7 +31,7 @@ jobs:
           # # Current version
           # - 19.x
 
-    name: Examples / node-version=${{ matrix.node-version }}
+    name: Examples + Templates / node-version=${{ matrix.node-version }}
 
     steps:
     - uses: actions/checkout@v3
@@ -88,14 +43,14 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Check dependencies
+    - name: Check dependencies for examples
       run: ./dev.py examples-check-deps
 
     - name: Install node dependencies
-      run: ./dev.py examples-npm-install
+      run: ./dev.py all-npm-install
 
     - name: Build frontend code
-      run: ./dev.py examples-npm-build
+      run: ./dev.py all-npm-build
 
     - name: Build wheel packages
       run: |
@@ -103,9 +58,9 @@ jobs:
         xargs -n 1 sed -i 's/_RELEASE = False/_RELEASE = True/';
         ./dev.py examples-python-build-package
     
-    - name: Upload wheel packages with examples
+    - name: Upload wheel packages
       uses: actions/upload-artifact@v3
       with:
-        name: examples-wheel-examples
+        name: all-wheel
         path: dist/*.whl
         if-no-files-found: error
