--- a/template-reactless/my_component/frontend/package.json
+++ b/template-reactless/my_component/frontend/package.json
@@ -6,7 +6,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "react-scripts": "^5.0.1",
-    "streamlit-component-lib": "^1.3.0",
+    "streamlit-component-lib": "^2.0.0",
     "typescript": "^4.2.0"
   },
   "scripts": {
@@ -19,7 +19,11 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
