--- a/examples/CustomDataframe/custom_dataframe/frontend/package.json
+++ b/examples/CustomDataframe/custom_dataframe/frontend/package.json
@@ -6,7 +6,7 @@
     "lodash": "4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "streamlit-component-lib": "^1.3.0"
+    "streamlit-component-lib": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,7 +35,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.2.0"
   }
 }
