--- a/examples/MaterialLogin/material_login/frontend/package.json
+++ b/examples/MaterialLogin/material_login/frontend/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "custom-radio-button-example",
+  "name": "custom-materia-login-example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.12.3",
+    "@material-ui/core": "^4.12.4",
     "formik": "^2.1.5",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.62.1",
-    "streamlit-component-lib": "^1.3.0",
+    "streamlit-component-lib": "^2.0.0",
     "yup": "^0.29.1"
   },
   "scripts": {
@@ -42,7 +42,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/yup": "^0.29.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.2.0"
   }
 }
