--- a/examples/RadioButton/radio_button/frontend/package.json
+++ b/examples/RadioButton/radio_button/frontend/package.json
@@ -7,7 +7,7 @@
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "streamlit-component-lib": "^1.3.0",
+    "streamlit-component-lib": "^2.0.0",
     "styletron-engine-atomic": "^1.5.0",
     "styletron-react": "^6.1.0"
   },
@@ -38,7 +38,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.2.0"
   }
 }
