Add cookiecutter template (#51)

--- a/cookiecutter/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-react/package.json
+++ b/cookiecutter/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my_component",
+  "name": "{{ cookiecutter.import_name }}",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
