--- a/cookiecutter/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-reactless/package.json
+++ b/cookiecutter/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-reactless/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "my_component",
+  "name": "{{ cookiecutter.import_name }}",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "streamlit-component-lib": "^2.0.0"
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "react-scripts": "^5.0.1",
+    "streamlit-component-lib": "^2.0.0",
+    "typescript": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,12 +30,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": ".",
-  "devDependencies": {
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.2.0"
-  }
+  "homepage": "."
 }
