--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -98,6 +98,15 @@ jobs:
         path: dist/*.whl
         if-no-files-found: error
 
+    - name: Install python dependencies
+      run: ./dev.py install-python-deps
+
+    - name: Install browsers
+      run: ./dev.py install-browsers
+
+    - name: Run e2e tests
+      run: ./dev.py run-e2e
+
   build-cookiecutter:
     runs-on: ubuntu-latest
 
