Add demo SelectExplain component

--- a/template/select_explain/frontend/package.json
+++ b/template/select_explain/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my_component",
-  "version": "0.1.0",
+  "name": "select_explain",
+  "version": "0.0.0",
   "private": true,
   "dependencies": {
     "react": "^16.13.1",
