--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,29 +15,28 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: 
-          # For details, see: https://nodejs.dev/en/about/releases/
-          # Maintenance LTS. End Of Life: 2023-09-11
-          - 16.x
-          # Active LTS. End Of Life: 2025-04-30
-          - 18.x
-          # Current version
-          - 19.x
         component_lib_version:
           - current
           - develop
+        streamlit_version:
+          - latest
+          - nightly
 
-    name: Examples + Templates / node-version=${{ matrix.node-version }}  / component_lib_version=${{ matrix.component_lib_version }}
+    env:
+      NODE_VERSION: 18.x
+      PYTHON_VERSION: 3.6
+
+    name: Examples + Templates / streamlit_version=${{ matrix.streamlit_version }}  / component_lib_version=${{ matrix.component_lib_version }}
 
     steps:
     - uses: actions/checkout@v3
       with:
         persist-credentials: false
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ env.NODE_VERSION }}
 
     - name: Check dependencies for examples
       run: ./dev.py examples-check-deps
@@ -102,10 +101,10 @@ jobs:
       uses: docker/setup-buildx-action@7703e82fbced3d0c9eec08dff4429c023a5fd9a9
 
     - name: Build docker images
-      run: ./dev.py e2e-build-images
+      run: ./dev.py e2e-build-images --streamlit-version=${{ matrix.streamlit_version }} --python-version=${{ env.PYTHON_VERSION }}
 
     - name: Run e2e tests
-      run: ./dev.py e2e-run-tests
+      run: ./dev.py e2e-run-tests --streamlit-version=${{ matrix.streamlit_version }} --python-version=${{ env.PYTHON_VERSION }}
 
   build-cookiecutter:
     runs-on: ubuntu-latest
