--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -110,17 +110,9 @@ jobs:
         path: dist/*.whl
         if-no-files-found: error
 
-    - name: Set up Docker Buildx
-      if: matrix.node_version == '19.x'
-      uses: docker/setup-buildx-action@7703e82fbced3d0c9eec08dff4429c023a5fd9a9 # v2.9.1
-
-    - name: Build docker images
-      if: matrix.node_version == '19.x'
-      run: ./dev.py e2e-build-images "--streamlit-version=${{ env.STREAMLIT_VERSION }}" "--python-version=${{ env.PYTHON_VERSION }}"
-
     - name: Run e2e tests
       if: matrix.node_version == '19.x'
-      run: ./dev.py e2e-run-tests "--streamlit-version=${{ env.STREAMLIT_VERSION }}" "--python-version=${{ env.PYTHON_VERSION }}"
+      uses: ./.github/workflows/e2e-tests.yaml
 
   build-cookiecutter:
     runs-on: ubuntu-latest
