Run tests only for Node version 19.x

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   run-dockerized-e2e-tests:
+    if: startsWith(${{ env.NODE_VERSION }}, '19.x')
     runs-on: ubuntu-latest
 
     steps:
