--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -5,12 +5,10 @@ on:
     workflows: ["CI"]
     types:
       - completed
-    status:
-      - success
 
 jobs:
   run-dockerized-e2e-tests:
-    if: startsWith(env.NODE_VERSION, '19.x')
+    if: startsWith(env.NODE_VERSION, '19.x') && github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
 
     name: E2E tests / streamlit_version=${{ matrix.streamlit_version }}  / component_lib_version=${{ matrix.component_lib_version }}
