--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/setup-buildx-action@7703e82fbced3d0c9eec08dff4429c023a5fd9a9 # v2.9.1
 
       - name: Build docker images
-        run: ./dev.py e2e-build-images "--streamlit-version=${{ env.STREAMLIT_VERSION }}" "--python-version=${{ env.PYTHON_VERSION }}"
+        run: ./dev.py e2e-build-images "--streamlit-version=${{ inputs.streamlit_version }}" "--python-version=${{ inputs.python_version }}"
 
       - name: Run e2e tests
-        run: ./dev.py e2e-run-tests "--streamlit-version=${{ env.STREAMLIT_VERSION }}" "--python-version=${{ env.PYTHON_VERSION }}"
+        run: ./dev.py e2e-run-tests "--streamlit-version=${{ inputs.streamlit_version }}" "--python-version=${{ inputs.python_version }}"
