--- a/.github/actions/e2e-tests/action.yaml
+++ b/.github/actions/e2e-tests/action.yaml
@@ -25,6 +25,7 @@ runs:
       uses: actions/download-artifact@v3
       with:
         name: all-wheel
+        path: downloaded-artifacts
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@7703e82fbced3d0c9eec08dff4429c023a5fd9a9 # v2.9.1
