--- a/.github/actions/e2e-tests/action.yaml
+++ b/.github/actions/e2e-tests/action.yaml
@@ -30,8 +30,8 @@ runs:
     - name: Move downloaded artifacts
       shell: bash
       run: |
-        mkdir -p ${{ github.workspace }}/component-template/downloaded-artifacts
-        mv ${{ github.workspace }}/component-template/*.whl ${{ github.workspace }}/component-template/downloaded-artifacts
+        mkdir -p ${{ github.workspace }}/downloaded-artifacts
+        mv ${{ github.workspace }}/*.whl ${{ github.workspace }}/downloaded-artifacts
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@7703e82fbced3d0c9eec08dff4429c023a5fd9a9 # v2.9.1
