--- a/.github/actions/e2e-tests/action.yaml
+++ b/.github/actions/e2e-tests/action.yaml
@@ -27,11 +27,11 @@ runs:
         name: all-wheel
         path: downloaded-artifacts
 
-    - name: Move downloaded artifacts
-      shell: bash
-      run: |
-        mkdir -p ${{ github.workspace }}/downloaded-artifacts
-        mv ${{ github.workspace }}/*.whl ${{ github.workspace }}/downloaded-artifacts
+#    - name: Move downloaded artifacts
+#      shell: bash
+#      run: |
+#        mkdir -p ${{ github.workspace }}/downloaded-artifacts
+#        mv ${{ github.workspace }}/*.whl ${{ github.workspace }}/downloaded-artifacts
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@7703e82fbced3d0c9eec08dff4429c023a5fd9a9 # v2.9.1
