fixup! Modularize workflows

--- a/.github/actions/build_streamlit_component_library/action.yaml
+++ b/.github/actions/build_streamlit_component_library/action.yaml
@@ -17,7 +17,7 @@ runs:
     - name: Check prerequisite
       shell: bash
       run: |
-        if command -v node > /dev/null
+        if ! command -v node > /dev/null
         then
           echo "Node is required to use this action"
           exit 1
